--- a/views/public/css/estilos.css
+++ b/views/public/css/estilos.css
@@ -1,27 +1,37 @@
 :root{
     --bg-main:#4C7295;
-    --bg-main-2:rgb(56, 212, 121);
+    --bg-main-2:#15BE6D;
+    --bg-login: #2B2B2B;
 }
 
 *{
 	font-family:'Roboto';
 }
+body{
+    background-image: linear-gradient(to left bottom, #15be6d, #009a90, #00718a, #314960, #2b2b2b);
+    height: 100vh; 
+}
+.bg-login{
+    background-color: var(--bg-login);
+    box-shadow: -1px 2px 20px 1px rgba(0,0,0,0.54);
+    -webkit-box-shadow: -1px 2px 20px 1px rgba(0,0,0,0.54);
+    -moz-box-shadow: -1px 2px 20px 1px rgba(0,0,0,0.54);
+}
 .login-input::placeholder{
     color: #bbb;
 }
-body{
-    background-color: var(--bg-main);
-    height: 90vh;; 
-}
+
+
 .btn-lite{
     background-color: var(--bg-main-2);
-    color: white;;
+    color: white;
+    transition: all .3s;
 }
 .btn-lite:hover{
-    background-color: #4C7295;
-    color: var(--bg-main-2);
+    background-color: #157849;
+    color: white;
 }
 .btn-lite:focus{
-    background-color: red;
+    background-color: #157849;
     color: white;
 }
