--- a/views/public/css/estilos.css
+++ b/views/public/css/estilos.css
@@ -11,6 +11,9 @@ body{
     background-image: linear-gradient(to left bottom, #15be6d, #009a90, #00718a, #314960, #2b2b2b);
     height: 100vh; 
 }
+.bg-main-2{
+    background-color: var(--bg-main-2);
+}
 .bg-login{
     background-color: var(--bg-login);
     box-shadow: -1px 2px 20px 1px rgba(0,0,0,0.54);
