--- a/views/public/css/estilos.css
+++ b/views/public/css/estilos.css
@@ -2,6 +2,7 @@
     --bg-main:#4C7295;
     --bg-main-2:#15BE6D;
     --bg-login: #2B2B2B;
+    --bg-grey:#DDDD;
 }
 
 *{
@@ -37,4 +38,16 @@ body{
 .btn-lite:focus{
     background-color: #157849;
     color: white;
+}
+/* ESTILOS PARA CABECERA*/
+.cabecera{
+    background-color: var(--bg-main-2);
+    width: 100%;
+    height: 56px;
+    -webkit-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+-moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+}
+.salir i{
+    font-size: 30px;
 }
