--- a/views/public/css/estilos.css
+++ b/views/public/css/estilos.css
@@ -11,6 +11,7 @@
 body{
     background-image: linear-gradient(to left bottom, #15be6d, #009a90, #00718a, #314960, #2b2b2b);
     height: 100vh; 
+    overflow: hidden !important;
 }
 .bg-main-2{
     background-color: var(--bg-main-2);
@@ -45,9 +46,38 @@ body{
     width: 100%;
     height: 56px;
     -webkit-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
--moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+    -moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+    position: relative;
 }
 .salir i{
-    font-size: 30px;
+    font-size: 20px;
+}
+.menu-admin{
+    width: 20%;
+    height: 100vh;
+    background-color: var(--bg-main-2);
+    box-shadow: -4px 15px 20px 4px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -4px 15px 20px 4px rgba(0,0,0,0.75);
+    -moz-box-shadow: -4px 15px 20px 4px rgba(0,0,0,0.75);
+}
+
+.icon-p i{
+        display: none;
+    }
+
+@media (max-width: 830px){
+    .menu-admin{
+        width: 100%;
+        height: 200px;
+        -webkit-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+        -moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+        box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
+    }
+    .icon-p i{
+        display:inline-block;
+    }
+    .logout {
+        display: none;
+    }
 }
