--- a/views/public/css/estilos.css
+++ b/views/public/css/estilos.css
@@ -8,10 +8,10 @@
 *{
 	font-family:'Roboto';
 }
-body{
+.body{
     background-image: linear-gradient(to left bottom, #15be6d, #009a90, #00718a, #314960, #2b2b2b);
     height: 100vh; 
-    overflow: hidden !important;
+
 }
 .bg-main-2{
     background-color: var(--bg-main-2);
@@ -65,6 +65,26 @@ body{
 .icon-p i{
         display: none;
     }
+
+.contenedor{
+    display: flex;
+    background-image: linear-gradient(to right top, #afb9c7, #b3c6cd, #bdd2d1, #cedcd3, #e1e5d9);
+    height: 100vh;
+    overflow-y: hidden;
+}
+body{
+    overflow-y: hidden;
+}
+.content-wrapper{
+    padding: 12px;
+    margin-right: auto;
+    width: 100%;
+    margin:8px 12px !important;
+}
+.content-header h1{
+    color: #15BE6D;
+}
+
 
 @media (max-width: 830px){
     .menu-admin{
