--- a/views/public/css/sliderbar.css
+++ b/views/public/css/sliderbar.css
@@ -19,10 +19,11 @@ font-size:20px;
 }
 
 :root{
-    --bg-main:#4C7295;
+    --bg-main:#113651;
     --bg-main-2:#15BE6D;
     --bg-login: #2B2B2B;
     --bg-grey:#DDDD;
+
 }
 
 
@@ -32,11 +33,11 @@ width:250px;
 }
 
 .main-menu {
-background:var(--bg-main-2);
-
+background:var(--bg-main);
+display: inline-block;
 top:0;
 bottom:10px;
-height:94%;
+height:80vh;
 left:0;
 width:60px;
 overflow:hidden;
@@ -64,7 +65,7 @@ position:relative;
 display:table;
 border-collapse:collapse;
 border-spacing:0;
-color:#2b2b2b;
+color:#fff;
  font-family: arial;
 font-size: 14px;
 text-decoration:none;
