--- a/views/public/css/sliderbar.css
+++ b/views/public/css/sliderbar.css
@@ -27,10 +27,10 @@ font-size:20px;
 }
 
 
-.main-menu:hover,nav.main-menu.expanded {
+/*.main-menu:hover,nav.main-menu.expanded {
 width:250px;
 
-}
+}*/
 
 .main-menu {
 background:var(--bg-main);
@@ -39,7 +39,9 @@ top:0;
 bottom:10px;
 height:80vh;
 left:0;
-width:60px;
+/
+/*width:60px;*/
+width:250px;
 overflow:hidden;
 -webkit-transition:width .05s linear;
 transition:width .05s linear;
