--- a/views/public/css/estilos.css
+++ b/views/public/css/estilos.css
@@ -99,6 +99,9 @@ body{
     color: #fff;
     border: none;
 }
+.input-disable{
+    cursor: no-drop;
+}
 
 @media (max-width: 830px){
     .menu-admin{
