--- a/views/public/css/estilos.css
+++ b/views/public/css/estilos.css
@@ -102,7 +102,10 @@ body{
 .input-disable{
     cursor: no-drop;
 }
-
+.link-doc{
+    font-size: 20px;
+    color: #6C1F2F;
+}
 @media (max-width: 830px){
     .menu-admin{
         width: 100%;
