--- a/views/public/css/estilos.css
+++ b/views/public/css/estilos.css
@@ -6,9 +6,8 @@
 }
 
 
-
 *{
-	font-family:'Roboto';
+	  font-family: 'Titillium Web', sans-serif;
 }
 .body{
     background-image: linear-gradient(to left bottom, #15be6d, #009a90, #00718a, #314960, #2b2b2b);
@@ -87,8 +86,9 @@ body{
     width: 100%;
     margin:8px 12px !important;
     overflow-x: hidden;
+    
 }
-.content-header h3{
+.content-header h4{
     color: #15BE6D;
 }
 .log_text{
@@ -105,6 +105,17 @@ body{
 .link-doc{
     font-size: 20px;
     color: #6C1F2F;
+}
+.buscador-box{
+    
+}
+.bg-search{
+    background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 @media (max-width: 830px){
     .menu-admin{
